
2021-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* sqlxfdgen.c (get_col_name): prevent internal "spaced" variable
	  names like "FILLER 15" to generate invalid sql names
	* cobc.c (cobc_print_version): welcome 2021

2020-12-23  Ron Norman <rjn@inglenet.com>

	* cobc.c: --info Displays short (concatenated) list of available
	  INDEXED file handlers

2020-12-15  Ron Norman <rjn@inglenet.com>

	* cobc.c: --info output includes VB-ISAM in C-ISAM mode

2020-12-13  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (propagate_table): reduced codegen for INITIALIZE to a single
	  variant for tables with compile-time known size, removing extra logic

2020-12-11  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_initialize_compound, propagate_table):
	  fix INITIALIZE logic to correctly handle subscripts (bug #694)
	* parser.y: add check for valid ->pic pointer

2020-12-09  Ron Norman <rjn@inglenet.com>

	* cobc.c: Now calls cob_get_sig_name {in common.c} to get signal name
	* codegen.c (output_dump_code): Only emits code to catch abort 
	      when HAVE_SIGACTION is defined 

2020-12-08  Ron Norman <rjn@inglenet.com>

	* error.c: Improve the check for being in a new section/paragraph

2020-12-07  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_dump_code): Change to dump INDEXED BY variables
	  used in a record before the record is dumped

2020-12-07  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_dump_code): emit code for BASED/LINKAGE fields
	  to catch SIGSEGV/SIGBUS/SIGFPE and then skip the dump of that record

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): codegen to output INDEXED BY variables

2020-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (remove_trailing_slash) [_MSC_VER]: new function added to resolve
	  MSVC's issues with trailing slashes

2020-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): changed NULL-checked fields to